<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guide_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guide_16" />

    <View
        android:id="@+id/seperator"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_16"
        android:background="@color/seperator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_user"
        android:layout_width="@dimen/user_image_size"
        android:layout_height="@dimen/user_image_size"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_15"
        android:src="@drawable/walkthrough_image_3"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/seperator" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="start"
        app:constraint_referenced_ids="tv_username,tv_follower"
        app:layout_constraintStart_toEndOf="@id/iv_user"


        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/username"
        android:textColor="@color/cinder"
        android:textSize="@dimen/text_size_13"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/seperator" />

    <TextView
        android:id="@+id/tv_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_1"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/null_recipe"
        android:textSize="@dimen/text_size_13"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />


    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_1"
        android:layout_marginTop="@dimen/margin_1"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/no_follower"
        android:textSize="@dimen/text_size_13"
        app:layout_constraintStart_toEndOf="@id/tv_recipe"

        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@color/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user" />

    <TextView
        android:id="@+id/tv_food_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.5dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/food_title"
        android:textColor="@color/cinder"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/view_divider" />

    <TextView
        android:id="@+id/tv_food_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_1"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/type_of_food"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tv_food_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/food_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_11"
        android:paddingBottom="@dimen/padding_12"
        android:scaleType="centerCrop"
        android:src="@drawable/walkthrough_image_3"
        app:layout_constraintBottom_toTopOf="@id/tv_like"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tv_food_description" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/editor_choice_medal"
        android:layout_width="@dimen/medal_size"
        android:layout_height="@dimen/medal_size"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_15"
        android:background="@drawable/medal_background"
        android:src="@drawable/editors_pick_icon"
        app:layout_constraintEnd_toEndOf="@id/food_image"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toTopOf="@id/food_image" />

    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_14"
        android:text="@string/no_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft" />

    <TextView
        android:id="@+id/tv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_1"
        android:layout_marginBottom="@dimen/margin_14"
        android:text="@string/no_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_comment" />


</androidx.constraintlayout.widget.ConstraintLayout>